# Deal-Flow

./: .dockerignore  .env.postgres.example  .env.web.example  .gitignore  Dockerfile.web  README.md  docker-compose.postgres.yml  docker-compose.web.yml  pyproject.toml  render.yaml
deal_flow_ingest/: README.md  __init__.py  __main__.py  alembic.ini  cli.py  pyproject.toml
deal_flow_ingest/alembic/: env.py
deal_flow_ingest/alembic/versions/: 0001_initial_schema.py  0002_business_associate_dimension.py  0003_asset_registry_columns.py  0004_pipeline_registry.py  0005_crown_tenure_registry.py  0006_pipeline_geometry_wkt.py  0007_enable_postgis.py
deal_flow_ingest/deal_flow_ingest/: __init__.py  __main__.py  app.py  apply_saved_sql.py  cli.py  config.py  dealflow.py
deal_flow_ingest/deal_flow_ingest/configs/: sources.yaml
deal_flow_ingest/deal_flow_ingest/db/: load.py  migrate.py  schema.py
deal_flow_ingest/deal_flow_ingest/io/: cache.py  downloader.py
deal_flow_ingest/deal_flow_ingest/sample_data/: README.md  ami_crown_clients_sample.csv  ami_crown_dispositions_sample.csv  ami_crown_land_keys_sample.csv  ami_crown_participants_sample.csv  facility_master_sample.csv  facility_production_sample.csv  general_well_data_sample.csv  liability_sample.csv  open_alberta_placeholder.csv  operators_sample.csv  pipelines_sample.csv  production_sample.csv  st102_facility_list_sample.csv  well_facility_bridge_sample.csv  well_infrastructure_sample.csv  well_licence_sample.csv  wells_sample.csv
deal_flow_ingest/deal_flow_ingest/services/: __init__.py  pipeline.py  registry_queries.py
deal_flow_ingest/deal_flow_ingest/sources/: __init__.py  aer.py  ami.py  open_alberta.py  petrinex.py
deal_flow_ingest/deal_flow_ingest/tests/: test_aer_registry.py  test_aer_st37_parser.py  test_ami_registry.py  test_apply_saved_sql.py  test_business_associate_load.py  (+17 more)
(+68 files in other folders)
