[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deal-flow"
version = "0.1.0"
description = "Public Alberta oil and gas deal-flow workbook generator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "requests>=2.31",
  "pydantic>=2.6",
  "openpyxl>=3.1",
  "python-dateutil>=2.9",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["deal_flow"]

[tool.pytest.ini_options]
pythonpath = ["deal_flow"]
testpaths = ["tests"]
